# cpp.js

./: .editorconfig  .eslintrc.js  .gitignore  .npmignore  404.html  AGENTS.md  CNAME  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  beta-releases.md  check-beta-status.js  check-external-dependencies.js  check-native-versions.js  eslint.config.mjs  external-dependencies.md  index.html  llms-full.txt  native-versions.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  sitemap.xml
.agents/plugins/: marketplace.json
.changeset/: config.json  pre.json
.claude-plugin/: marketplace.json
.cursor-plugin/: marketplace.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  new-package.md
.github/plugin/: marketplace.json
.github/workflows/: build-linux.yml  build-macos.yml  build-prebuilt-packages.yml  build-windows.yml  deploy-website.yml  linux_build.yml  macos_build.yml  release.yml  test-android-sample.yml  test-core.yml  test-ios-sample.yml
assets/css/: styles.0aba3071.css  styles.1b5d2f1b.css  styles.247d5b0b.css  styles.2cf82c11.css  styles.440c5250.css  styles.4ee9c3e8.css  styles.5e2ffbd9.css  styles.8dd4eea3.css  styles.99230789.css  styles.a8f00ed6.css  styles.c362d9e9.css  styles.c9e7ed92.css  styles.d929f8a4.css  styles.ee1cc2ab.css
assets/js/: 0058b4c6.0fcf460c.js  0058b4c6.2a1681dc.js  0058b4c6.2e0201b5.js  0058b4c6.2f8a0d77.js  0058b4c6.48503b81.js  0058b4c6.8862165b.js  0058b4c6.8aea4b2f.js  0058b4c6.b2f2c8a7.js  0058b4c6.c5bc5ddb.js  0058b4c6.cca7ddc0.js  0058b4c6.d2a24a0a.js  0058b4c6.e7a52e6c.js  00bcbaf5.a24a745a.js  01a85c17.1472460f.js  01a85c17.2191834f.js  01a85c17.34484889.js  01a85c17.7ad6dfc4.js  01a85c17.7fe2528c.js  01a85c17.a2a18c06.js  01a85c17.a72694a7.js  01a85c17.af0f33e6.js  01a85c17.c8dc5353.js  01a85c17.d11bbde1.js  01a85c17.d51be65d.js  031793e1.da195080.js  03768229.0d2dd939.js  03768229.13821757.js  03768229.170546ae.js  03768229.18b8dc01.js  03768229.1b55866c.js  03768229.357a360e.js  03768229.35aec58c.js  03768229.3a6251bf.js  03768229.3d9b307f.js  03768229.40f59320.js  03768229.4dc5afb2.js  03768229.66ce2989.js  03768229.6a545f7c.js  03768229.ab432191.js  03768229.b0972414.js  (+2770 more)
bind-types/: index.html
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/authors/: index.html
blog/first-blog-post/: index.html
blog/long-blog-post/: index.html
blog/mdx-blog-post/: index.html
blog/tags/: index.html
blog/welcome/: index.html
changelogs/: index.html
core/cppjs-core/: README.md  package.json
core/cppjs-core-docker/: Dockerfile  package.json
core/cppjs-core-rn-embind/: package.json
core/cppjs-core-rn-embind/cpp/: CMakeLists.txt
core/cppjs-core-rn-embind/cpp/src/emscripten/: bind.cpp  bind.h  val.h
core/cppjs-core-sample-creator/: package.json
core/cppjs-core-sample-list/: package.json
core/cppjs-core/src/assets/: CMakeLists.txt  browser.js  dist.cmake  extern-post.js  node.js
cppjs-agents/: .mcp.json  README.md  gemini-extension.json
cppjs-agents/.claude-plugin/: plugin.json
cppjs-agents/.codex-plugin/: plugin.json
cppjs-agents/.cursor-plugin/: plugin.json
cppjs-agents/.github/: plugin.json
cppjs-agents/commands/: cppjs-bug-fix.md  cppjs-integrate.md  cppjs-package.md
cppjs-agents/install/: claude-code.md  codex.md  copilot.md  cursor.md  gemini.md  opencode.md  skills-cli.md
cppjs-core/cpp.js/: .npmignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  package.json  vitest.config.js
cppjs-core/cppjs-core-create-app/: CHANGELOG.md  README.md  package.json
cppjs-core/cppjs-core-docker/: Dockerfile  DraftWindowsDockerfile  package.json
cppjs-core/cppjs-core-embind-jsi/: CHANGELOG.md  README.md  package.json
cppjs-core/cppjs-mcp/: AGENTS.md  README.md  package.json
cppjs-extensions/cppjs-extension-sample/: package.json
cppjs-plugins/cppjs-plugin-metro/: CHANGELOG.md  README.md  package.json
cppjs-plugins/cppjs-plugin-react-native/: .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  README.md  app.plugin.cjs  cppjs.config.mjs  package.json  react-native-cppjs.podspec
cppjs-plugins/cppjs-plugin-react-native-ios-helper/: CHANGELOG.md  package.json  react-native-cppjs-ios-helper.podspec
cppjs-plugins/cppjs-plugin-react-native/script/: CMakeLists.txt  bridgeCache.js  build_android.js  build_android_assets.js  build_android_deps.js  build_ios.js  build_js.js  getCliPath.js  iosLibCache.js  resolveBuildTarget.js
cppjs-plugins/cppjs-plugin-rollup/: AGENTS.md  CHANGELOG.md  README.md  index.js  package.json
cppjs-plugins/cppjs-plugin-vite/: AGENTS.md  CHANGELOG.md  README.md  index.js  package.json
cppjs-plugins/cppjs-plugin-webpack/: AGENTS.md  README.md  index.js  package.json
cppjs-plugins/cppjs-plugin-webpack-loader/: index.js  package.json
cppjs-samples/cppjs-playground-backend-nodejs/: README.md  cppjs.config.mjs  package.json
cppjs-samples/cppjs-playground-backend-nodejs-multithread/: cppjs.config.mjs  package.json
cppjs-samples/cppjs-playground-cloud-cloudflare-worker/: .gitignore  cppjs.config.mjs  index.js  package.json  wrangler.toml
cppjs-samples/cppjs-playground-mobile-reactnative-cli/: .gitignore  (+4 more)
cppjs-samples/cppjs-playground-mobile-reactnative-cli-multithread/: cppjs.config.mjs  package.json
docs/: ARCHITECTURE.md  CODEMAP.md  agent-overview.md  agent-snippet.md
how-it-works/: index.html
integrations/: index.html
plugins/cppjs-plugin-react-native/cpp/: CMakeLists.txt
plugins/cppjs-plugin-react-native/cpp/src/: JSI_module.cpp
react-native/: index.html
scripts/: check-beta-status.js  check-dependency-wiring.js  check-dist.js  check-external-dependencies.js  check-native-versions.js  check-source-hashes.js  detect-framework.js  doctor.sh  e2e-templates.js  help.js  pack-all.mjs  pin-docker-image.js  pin-source-hash.js  refresh-expo-sample.js  scaffold-package.js
seamless-integration/: index.html
showcase/: index.html
web/: index.html
website/: CHANGELOG.md  docusaurus.config.js  navbar.json  package.json  sidebars.json  tailwind.config.js
(+1307 files in other folders)
